# Python-JSON-Hackathon-

./: Hackathon_Notebook_Dia1.ipynb  README.md  iss_location.html
Aula_1/: Hackathon_Notebook_Dia1.ipynb  MOCK_DATA.json
Aula_2/: pyproject.toml
Aula_2/ISS_tracker/: manage.py
Aula_2/ISS_tracker/ISS_tracker/: asgi.py  settings.py  urls.py  wsgi.py
Aula_2/ISS_tracker/map_render/: apps.py  models.py  urls.py  views.py
Aula_2/ISS_tracker/map_render/migrations/: 0001_initial.py
Aula_2/ISS_tracker/map_render/templates/map_render/: iss_map.html
