[tool.poetry]
name = "aula-2"
version = "0.1.0"
description = ""
authors = ["IcaroOm <icaroomdigital@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
folium = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
